src/PclSharp.Extern/std/VectorOfXYZRGBA.generated.h

// Code generated by a template
#pragma once
#include "..\export.h"
#include <vector>
#include "pcl\point_types.h"


using namespace std;
using namespace pcl;


typedef vector<PointXYZRGBA> vectorType;

#ifdef __cplusplus  
extern "C" {  
#endif

EXPORT(vectorType*) std_vector_xyzrgba_ctor()
{
	return new vector<PointXYZRGBA>();
}

EXPORT(vectorType*) std_vector_xyzrgba_ctor_count(int count)
{
	return new vector<PointXYZRGBA>(count);
}

EXPORT(void) std_vector_xyzrgba_delete(vector<PointXYZRGBA>** ptr)
{
	delete *ptr;
	*ptr = NULL;
}

EXPORT(void) std_vector_xyzrgba_at(vector<PointXYZRGBA>* ptr, size_t idx, PointXYZRGBA* value)
{
	*value = ptr->at(idx);
}

EXPORT(size_t) std_vector_xyzrgba_size(vector<PointXYZRGBA>* ptr)
{
	return ptr->size();
}

EXPORT(void) std_vector_xyzrgba_clear(vector<PointXYZRGBA>* ptr)
{
	ptr->clear();
}

EXPORT(void) std_vector_xyzrgba_resize(vector<PointXYZRGBA>* ptr, int32_t size)
{
	ptr->resize(size);
}

EXPORT(void) std_vector_xyzrgba_add(vector<PointXYZRGBA>* ptr, PointXYZRGBA value)
{
	//the value needs to be aligned to be pushed into the cloud, so do that.
	PointXYZRGBA deref;
	memcpy(&deref, &value, sizeof(PointXYZRGBA));
	ptr->push_back(deref);
}

EXPORT(void) std_vector_xyzrgba_insert(vector<PointXYZRGBA>* ptr, ptrdiff_t index, PointXYZRGBA value)
{
	//the value needs to be aligned to be pushed into the cloud, so do that.
	PointXYZRGBA deref;
	memcpy(&deref, &value, sizeof(PointXYZRGBA));
	ptr->insert(ptr->begin()+index, deref);
}

EXPORT(PointXYZRGBA*) std_vector_xyzrgba_data(vector<PointXYZRGBA>* ptr)
{
	return ptr->data();
}

#ifdef __cplusplus  
}
#endif