src/PclSharp/Std/VectorOfXYZRGBA.generated.cs

// Code generated by a template
using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using System.Runtime.CompilerServices;
using System.Numerics;
using PclSharp.Struct;


namespace PclSharp.Std
{
	public static partial class Invoke
	{
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr std_vector_xyzrgba_ctor();
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr std_vector_xyzrgba_ctor_count(int count);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzrgba_delete(ref IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzrgba_at(IntPtr ptr,  UIntPtr idx, ref PointXYZRGBA value);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern UIntPtr std_vector_xyzrgba_size(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzrgba_clear(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzrgba_resize(IntPtr ptr, int size);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzrgba_add(IntPtr ptr, PointXYZRGBA value);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr std_vector_xyzrgba_data(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzrgba_insert(IntPtr ptr, IntPtr idx, PointXYZRGBA value);
	}

	public unsafe class VectorOfXYZRGBA : Vector<PointXYZRGBA>
	{	
		private bool _suppressDispose;

		public override int Count => (int)Invoke.std_vector_xyzrgba_size(_ptr);
		public IntPtr Data => Invoke.std_vector_xyzrgba_data(_ptr);
		public PointXYZRGBA* DataU => (PointXYZRGBA*)Data;

		public VectorOfXYZRGBA()
		{
			_ptr = Invoke.std_vector_xyzrgba_ctor();
		}

		public VectorOfXYZRGBA(int count)
		{
			_ptr = Invoke.std_vector_xyzrgba_ctor_count(count);
		}

		/// <summary>
        /// construct as a copy of the list
        /// </summary>
        /// <param name="list"></param>
		public VectorOfXYZRGBA(List<PointXYZRGBA> list)
        {
            var arr = list.ToArray();
            _ptr = Invoke.std_vector_xyzrgba_ctor_count(arr.Length);
            
            var dptr = (PointXYZRGBA*)Data;
            for(var i = 0; i < arr.Length; i++)
                dptr[i] = arr[i];
        }

		internal VectorOfXYZRGBA(IntPtr ptr)
		{
			_suppressDispose = true;
			_ptr = ptr;
		}

		public override void At(int idx, ref PointXYZRGBA value)
		{
			Invoke.std_vector_xyzrgba_at(_ptr, (UIntPtr)idx, ref value);
		}

		public override PointXYZRGBA this[int idx]
        {
            get { return DataU[idx]; }
			set { DataU[idx] = value; }
		}

		public override void Resize(int size)
			=> Invoke.std_vector_xyzrgba_resize(_ptr, size);

		public override void Add(PointXYZRGBA value)
			=> Invoke.std_vector_xyzrgba_add(_ptr, value);

		public override void CopyTo(PointXYZRGBA[] arr, int idx)
		{
            fixed (PointXYZRGBA* aptr = arr)
            {
                Unsafe.CopyBlockUnaligned(aptr, DataU, (uint)(sizeof(PointXYZRGBA) * Count));
            }
		}

		public override PointXYZRGBA[] ToArray()
		{
			var arr = new PointXYZRGBA[Count];
            fixed (PointXYZRGBA* aptr = arr)
            {
                Unsafe.CopyBlockUnaligned(aptr, DataU, (uint)(sizeof(PointXYZRGBA) * arr.Length));
            }

			return arr;
		}

		public override void Clear() => Invoke.std_vector_xyzrgba_clear(_ptr);

		public override void Insert(int index, PointXYZRGBA item)
			=> Invoke.std_vector_xyzrgba_insert(_ptr, (IntPtr)index, item);

		public override IEnumerator<PointXYZRGBA> GetEnumerator()
		{
			var count = Count;
			for(var i = 0; i < count; i++)
				yield return this[i];
		}

		protected override void DisposeObject()
		{
			if (_suppressDispose)
				return;
			Invoke.std_vector_xyzrgba_delete(ref _ptr);
		}
	}
}
